Fix create guest link is hidden by styling

--- a/app/styles/pages/common/_common-ui-component.scss
+++ b/app/styles/pages/common/_common-ui-component.scss
@@ -89,7 +89,6 @@ md-tooltip .md-content {
 .user-autocomplete-result {
   display: flex;
   flex-direction: column;
-  height: 35px;
 
   &--information {
     display: flex;
